preview version of product