@@ -11,7 +11,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>23</java.version>
         <javafx.sdk>C:/dev/javafx-sdk-24.0.2/lib</javafx.sdk>
-        <project.build.directory>C:\Users\jonat\IdeaProjects\soProcessPlanning</project.build.directory>
+        <project.build.directory>C:/Users/jonat/IdeaProjects/soProcessPlanning/target</project.build.directory>
     </properties>
 
     <dependencies>
@@ -35,9 +35,15 @@
 
         <dependency>
             <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>5.2.5</version>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -46,7 +52,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>3.2.2</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -73,13 +79,40 @@
             </plugin>
 
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.6.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>ui.MainApp</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
                 <groupId>com.github.akman</groupId>
                 <artifactId>jpackage-maven-plugin</artifactId>
                 <version>0.1.5</version>
                 <configuration>
                     <input>${project.build.directory}</input>
                     <name>Planificador</name>
-                    <type>EXE</type>
+                    <arguments>
+                        --module-path C:/dev/javafx-sdk-24.0.2/lib --add-modules javafx.controls,javafx.fxml --main-jar soProcessPlanning-1.0.0-jar-with-dependencies.jar --main-class ui.MainApp
+                    </arguments>
                 </configuration>
             </plugin>
 
